# dioptra

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.Docker.md  README.md  build.nix  calibrate.sh  pyproject.toml  run_benchmarks.py  run_benchmarks.sh  run_examples.sh  setup_env.sh  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: README.md  pyproject.toml
benchmarks/src/dioptra_benchmarks/benchmark/: circuit.py  common.py  contexts.py
benchmarks/src/dioptra_benchmarks/information_retrieval/: README.md  binfhe_estimates.py  calibrate.py  context.py  contexts.py  main.py  pir.py  pke_estimates.py  run_benchmarks.py
benchmarks/src/dioptra_benchmarks/information_retrieval/calibration/: bfv_128.cd  bgv_128.cd  binfhe_128.cd  ckks_128.cd
benchmarks/src/dioptra_benchmarks/int_comparison/: README.md  calibrate.py  compare.py  context.py  estimates.py  main.py  run_benchmarks.py
benchmarks/src/dioptra_benchmarks/int_comparison/calibration/: binfhe_128.cd
benchmarks/src/dioptra_benchmarks/matrix/: README  README.md  binfhe_estimates.py  binfhe_matrixmatrix_estimates.py  binfhe_matrixvector_estimates.py  calibrate.py  contexts.py  main.py  matrix.py  pke_estimates.py  pke_matrixmatrix_estimates.py  pke_matrixvector_estimates.py  run_benchmarks.py
benchmarks/src/dioptra_benchmarks/matrix/calibration/: bfv_128.cd  bgv_128.cd  binfhe_128.cd
benchmarks/src/dioptra_benchmarks/nn/bfv/: __main__.py  estimates.py
benchmarks/src/dioptra_benchmarks/nn/bgv/: __main__.py  estimates.py
benchmarks/src/dioptra_benchmarks/nn/ckks/: __main__.py  estimates.py
benchmarks/src/dioptra_benchmarks/perceptron/: README.md  __init__.py  __main__.py  calibrate.py  context.py  estimates.py  main.py  perceptron.py  run_benchmarks.py
benchmarks/src/dioptra_benchmarks/perceptron/calibration/: ckks_128.cd
dioptra_native/: CMakeLists.txt
dioptra_native/src/: dioptra_native.cpp
docker/: Dockerfile
examples/: README.md  bfv1.dc  bgv1.dc  binfhe1.dc  boolean_binfhe.py  circuits.py  ckks1.dc  ckks_small1.dc  ckks_small1_client.cd  contexts.py  decorator_example.py  env.json  matrix_mult.py  matrix_mult_bfv.py  matrix_mult_bfv_bgv.py  matrix_mult_bgv.py  matrix_mult_ckks.py  network.py  network_anotated.py  network_binfhe.py  network_pke.py  nn_bfv.py  nn_bgv.py  nn_ckks.py  pyproject.toml  run_examples.sh  samples  schemes.py  simple_addition.py  simple_features_example.py  simple_nn.py  unsupported.py
examples/nn/: nn.py  nn_bfv.py  nn_bgv.py  nn_ckks.py  schemes.py
examples/src/dioptra_examples/: boolean_binfhe.py  contexts.py  decorator_example.py  schemes.py  unsupported.py
examples/src/dioptra_examples/envs/: env.py
examples/src/dioptra_examples/matrix_mult/: __init__.py
examples/src/dioptra_examples/matrix_mult/bfv/: __main__.py  estimates.py
examples/src/dioptra_examples/matrix_mult/bgv/: __main__.py  estimates.py
examples/src/dioptra_examples/matrix_mult/ckks/: __main__.py  estimates.py
examples/src/dioptra_examples/network/: binfhe.py  pke.py
examples/src/dioptra_examples/nn/: __init__.py
examples/src/dioptra_examples/nn/bfv/: __main__.py  estimates.py
examples/src/dioptra_examples/nn/bgv/: __main__.py  estimates.py
examples/src/dioptra_examples/nn/ckks/: __main__.py  estimates.py
nix/: openfhe-development.nix  openfhe-python.nix
src/dioptra/: __init__.py  _file_loading.py  cli.py  decorator.py  error.py  run.py  scheme_type.py
src/dioptra/analyzer/: analyzer_context.py  balanced.samples  calibration.py  code_loc.py  ct_level.py  operation.py  scheme.py  test_analyzer.py  test_analyzer_anotated.py  trace.py
src/dioptra/analyzer/binfhe/: analyzer.py  calibration.py  event.py  memory.py  params.py  runtime.py  value.py
src/dioptra/analyzer/metrics/: analysis_base.py  analysisbase.py  flame.py  memory.py  multdepth.py  runtime.py  runtime_alt.py
src/dioptra/analyzer/pke/: analysisbase.py  calibration.py  memory.py  multdepth.py  runtime.py
src/dioptra/analyzer/report/: memory.py  runtime.py
src/dioptra/analyzer/tests/: test_multdepth.py
src/dioptra/analyzer/utils/: code_loc.py  error.py  network.py  operation.py  operation.txt  trace.py  util.py
src/dioptra/binfhe/: analyzer.py  calibration.py  event.py  memory.py  runtime.py
src/dioptra/context/: __init__.py  calibrate.py  context_function.py  list.py
src/dioptra/core/: openfhe_script.py
src/dioptra/estimate/: __init__.py  annotate.py  env.py  estimation_case.py  render.py  report.py  timeline.py
src/dioptra/estimate/templates/: results_template.html
src/dioptra/openfhe_programs/: simple_addition.py
src/dioptra/pke/: analyzer.py  calibration.py  memory.py  multdepth.py  runtime.py
src/dioptra/report/: memory.py  runtime.py
src/dioptra/ui/: report_gen.py
src/dioptra/ui/analysis_site_skeleton/: styles.css
src/dioptra/ui/templates/: results_template.html
src/dioptra/utils/: code_loc.py  error.py  file_loading.py  measurement.py  network.py
src/dioptra/visualization/: annotation.py
tests/: test_ciphertextlevel.py  test_cli.py  test_contexts.py  test_multdepth.py  test_multdepth_anotated.py  test_runtime.py
