[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dioptra"
version = "0.0.1"
authors = [
  { name="Rawane Issa", email="rissa@galois.com" },
  { name="Chris Phifer", email="cphifer@galois.com" },
]
description = "A platform for running and analyzing FHE applications."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
dependencies = [
  "click",
  "click-log",
  "openfhe",
]

[project.scripts]
dioptra = "dioptra:cli.cli"

[tool.mypy]
files = [
  "src",
  "tests",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "click_log"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
