[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dioptra_benchmarks"
version = "0.0.1"
authors = [
  { name="Rawane Issa", email="rissa@galois.com" },
  { name="James LaMar", email="james.lamar@galois.com"},
  { name="Chris Phifer", email="cphifer@galois.com" },
]
description = "Dioptra benchmarks."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
dependencies = [
  "dioptra",
  "dioptra_examples",
]
